--- a/style.css
+++ b/style.css
@@ -19,9 +19,16 @@ body {
     margin-top: -10px;
 }
 
-.stats-container {
+.stats-container{
     display: flex;
+    justify-content: center;
 }
+
+.stats-container:hover{
+    cursor: pointer;
+    box-shadow: 0, 0, 30px lightblue;
+}
+
 
 .stats-card {
     background-color: #a8b0bc;
